# DnD-for-busy-people

./: README.md
discord_bot/: pyproject.toml
discord_bot/src/: bot.py
discord_bot/src/commands/: combat.py
discord_bot/src/commands/dm_only/: game_config.py  game_controls.py  items.py
discord_bot/tests/command_tests/: character_tests.py  explore_tests.py  inventory_tests.py
discord_bot/tests/command_tests/dm_only_tests/: non_party_characters_tests.py  party_characters_tests.py
rest_api/: pyproject.toml
rest_api/core/: settings.py
