[tool.poetry]
name = "dnd_for_busy_people_rest_api"
version = "0.1.0"
description = ""
authors = ["Maxwell Farver"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"
djangorestframework = "^3.12.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
